Update hutool-core/src/test/java/cn/hutool/core/stream/EntryStreamTest.java