@@ -134,7 +134,7 @@ public class EntryStreamTest {
 		final List<Integer> values = new ArrayList<>();
 		EntryStream.of(Arrays.asList(new Entry<>(1, 1), new Entry<>(1, 2), new Entry<>(2, 1), new Entry<>(2, 2)))
 			.peekValue(values::add)
-			.collect(Collectors.toList());
+			.toList();
 		Assert.assertEquals(Arrays.asList(1, 2, 1, 2), values);
 	}
 
